src/test/deca/syntax/valid/commentaire_pars_01.deca
// Description:
//    Programme minimaliste utilisant un commentaire.
//
// Resultats:
//
//
// Historique:
//    cree le 04/01/2023


/* un commentaire */