src/test/deca/syntax/invalid/commentaire_lex_01.deca
// Description:
//    tests de programme correct lexicalement
//
// Resultats:
//    Ligne 11 : Erreur de syntaxer.
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    cree le 03/01/2023

/*un */commentaire */